<resources>
    <string name="app_name">CourseTool</string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="login_button">LOGIN</string>


    <!-- <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string> -->
    <string name="logout">Logout</string>

    <!-- Strings related to the navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_title">Course Tool</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for navigation choices -->
    <string name="view_schedule">View Schedule</string>
    <string name="view_courses">View Courses</string>
    <string name="add_drop_courses">Add/Drop Courses</string>
    <string name="main_menu">Main Menu</string>
    <string name="other_options">Other Options</string>
    <string name="name_placeholder">name</string>
    <string name="username_placeholder">username</string>
    <string name="invalid_username_password">Invalid username/password</string>

    <string-array name="main_menu_list">
        <item>@string/view_schedule</item>
        <item>@string/view_courses</item>
        <item>@string/add_drop_courses</item>
    </string-array>
</resources>
